--- a/public/desktop/baccaratgame/index.html
+++ b/public/desktop/baccaratgame/index.html
@@ -17,9 +17,11 @@
   <title>PP Live Casino</title>
   <link rel="stylesheet"  href="../assets/preloaders/src/preloader_react.css?v=6">
   <script>window.GAIndexHtmlLoadStartTime = new Date().getTime();</script>
+  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
   <script src="../assets/preloaders/src/preloader_react.js?v=6"></script>
   <script src="../../common/session.js"></script>
   <script src="./betting.js"></script>
+ 
   <script>
     const LOG_ENDPOINTS = '';
     let params = new URLSearchParams(window.location.search);
